fix(admin): fixed name troubles; add migration and changed api
BREAKING CHANGES:
- in API /publish response Scenario not ScenarioVersion
- By migration deleted scenario_version table; scenario table linked with step table
