# api/openapi/v1/admin/specs.yaml
@@ -158,7 +158,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ScenarioVersion"
+                $ref: "#/components/schemas/Scenario"
         "404":
           description: Не найден
           content:
@@ -551,22 +551,6 @@ components:
           type: string
         url:
           type: string
-
-    ScenarioVersion:
-      type: object
-      required:
-        - id
-        - version
-        - isActive
-      properties:
-        id:
-          type: string
-          format: uuid
-        version:
-          type: integer
-          minimum: 1
-        isActive:
-          type: boolean
 
     Step:
       type: object
